clusters/hybrid01/config/gatus/gatus-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gatus
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
