clusters/hybrid01/config/gatus/gatus-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gatus-external
  namespace: gatus
spec:
  hosts:
  - "status.jkulzer.dev"
  gateways:
  - istio-external-gateway/external-gateway
  http:
  - route:
    - destination:
        host: gatus
        port:
          number: 80
